# mujoco_crazyflie

./: README.md
flyingpen/: CMakeLists.txt  package.xml
flyingpen/src/: trajectory8.cpp  trajectory_generation.cpp  wrench_observer.cpp
flyingpen_interface/: CMakeLists.txt  package.xml
flyingpen_interface/bag/: 12292112.csv  12292133.csv  12292159.csv  12300037.csv  log_plot.m
flyingpen_interface/config/: parameters.yaml
flyingpen_interface/launch/: flyingpen.launch.py
flyingpen_interface/src/: command_publisher.cpp  data_logging.cpp  rviz_visual.cpp
low_level_controller/: CMakeLists.txt  package.xml
low_level_controller/src/: PID_Cascade.cpp
plant/: package.xml  setup.cfg  setup.py
plant/data/: cf21B_500.xml
plant/plant/: plant.py
